--- a/#src/information.html
+++ b/#src/information.html
@@ -5,9 +5,20 @@
 @@include('_header.html')
 <section class="information">
 	<div class="container">
-
+		<div class="infornation__content content-information _tabs">
+			<nav class="content-information__nav">
+				<div class="content-information__item _tabs-item _active">Требования к контрагентам</div>
+				<div class="content-information__item _tabs-item">Условия оплаты</div>
+				<div class="content-information__item _tabs-item">Условия хранения</div>
+				<div class="content-information__item _tabs-item">Сертификаты</div>
+			</nav>
+			<div class="content-information__body">
+				<div class="content-information__block _tabs-block _active">1</div>
+				<div class="content-information__block _tabs-block">2</div>
+				<div class="content-information__block _tabs-block">3</div>
+				<div class="content-information__block _tabs-block">4</div>
+			</div>
+		</div>
 	</div>
 </section>
-
-
 @@include('_footer.html')
