--- a/#src/information.html
+++ b/#src/information.html
@@ -5,7 +5,7 @@
 @@include('_header.html')
 <section class="information">
 	<div class="container">
-		<div class="infornation__content content-information _tabs">
+		<div class="information__content content-information _tabs">
 			<nav class="content-information__nav">
 				<div class="content-information__item _tabs-item _active">Требования к контрагентам</div>
 				<div class="content-information__item _tabs-item">Условия оплаты</div>
@@ -13,10 +13,64 @@
 				<div class="content-information__item _tabs-item">Сертификаты</div>
 			</nav>
 			<div class="content-information__body">
-				<div class="content-information__block _tabs-block _active">1</div>
-				<div class="content-information__block _tabs-block">2</div>
-				<div class="content-information__block _tabs-block">3</div>
-				<div class="content-information__block _tabs-block">4</div>
+				<div class="content-information__block block-content-information _tabs-block _active">
+					<h4 class="title">Требования к контрагентам</h4>
+					<div class="block-content-information__text">
+						<p>
+							В целях реализации ООО «Спецресурс» данного ему статьей 312 Гражданского кодекса РФ права требования
+							доказательств того, что заключение договора поставки и исполнение по нему обязательств, в виде
+							последующего оформления и реализации сделок, принимается лицом, обладающим правом подписи, убедительно
+							просим Вас предоставить в надлежаще заверенном виде (п.3.26 ГОСТ Р 6.30-2003) копии следующих документов с
+							приложением оттиска печати:
+						</p>
+						<ol>
+							<li>Устав;</li>
+							<li>Свидетельства ИНН, ОГРН/ОГРНИП;</li>
+							<li>Выписка из ЕГРЮЛ/ЕГРИП;</li>
+							<li>Договор аренды по фактическому адресу нахождения;</li>
+							<li>Решение о назначении на должность руководителя (протокол общего собрания участников или совета
+								директоров (акционеров) или решение единственного участника (учредителя, акционера);</li>
+							<li>Приказ о назначении на должность руководителя;</li>
+							<li>Копия паспорта руководителя;</li>
+							<li>Приказ или доверенность на лиц, имеющих право подписи договоров и счетов-фактур.</li>
+						</ol>
+						<p>Благодарим за понимание!</p>
+					</div>
+				</div>
+				<div class="content-information__block block-content-information _tabs-block">
+					<h4 class="title">Условия оплаты</h4>
+					<div class="block-content-information__text">
+						<p>
+							Оплата осуществляется только по безналичному расчету.</p>
+						<p>Отгрузка продукции производится при условии 100% предварительной оплаты. Размер, сроки и порядок оплаты
+							вы всегда можете уточнить у вашего персонального менеджера.</p>
+						<p>Обращаем Ваше внимание, что по истечению указанного срока на счете – цена, а также наличие продукции на
+							складе, может измениться. Перед оплатой счета с истекшим сроком, позвоните Вашему менеджеру и попросите
+							его перевыставить счет с актуальними данными. Счета частичной оплате не подлежат.
+						</p>
+
+					</div>
+				</div>
+				<div class="content-information__block block-content-information _tabs-block">
+					<h4 class="title">Условия хранения</h4>
+					<div class="block-content-information__text">
+						<p> <strong>Уважаемые покупатели!</strong></p>
+						<p>Предлагаем воспользоваться услугой бесплатного хранения на нашем складе.В срок до 10 дней включительно со
+							дня оплаты товара возможно безвозмездное хранение на наших площадях. После указанного срока Вы можете
+							воспользоваться услугой доставки, либо забрать ее самостоятельно.</p>
+						<p>Приобретая продукцию заранее, Вы можете быть уверены, что все необходимые материалы будут в срок, а
+							воспользовавшись услугой бесплатного хранения, Вам не нужно будет беспокоиться о том, где временно
+							разместить продукцию.
+						</p>
+
+					</div>
+				</div>
+				<div class="content-information__block block-content-information _tabs-block">
+					<h4 class="title">Сертификаты</h4>
+					<div class="block-content-information__text developer">
+						<p>данный раздел находится в разработке.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
