--- a/#src/about.html
+++ b/#src/about.html
@@ -5,199 +5,201 @@
 @@include('_header.html')
 <section class="about">
 	<div class="container">
-		<div class="submenu about-item-tabs">
-			<div class="submenu__inner">
-				<ul class="submenu__list">
-					<li class="submenu__item">
-						<a href="#" class="submenu__link active" data-id="about-about">
-							о нас
-						</a>
-					</li>
-					<li class="submenu__item">
-						<a href="#" class="submenu__link " data-id="about-news">
-							Новости
-						</a>
-					</li>
-					<li class="submenu__item">
-						<a href="#" class="submenu__link " data-id="about-gallery">
-							Галерея
-						</a>
-					</li>
-					<li class="submenu__item">
-						<a href="#" class="submenu__link" data-id="about-vacancies">
-							Вакансии
-						</a>
-					</li>
-					<li class="submenu__item">
-						<a href="#" class="submenu__link " data-id="about-articles">
-							статьи
-						</a>
-					</li>
-					<li class="submenu__item">
-						<a href="#" class="submenu__link" data-id="about-partners">
-							Партнеры
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<div class="about-tabs">
-			<div id="about-about" class="about-about tab-item-about active-tab">
-				<h4 class="title">о нас</h4>
-				<div class="about-about__inner">
-					<div class="about-about__text">
-						<p>ООО «Спецресурс» - динамично развивающийся кабельный завод. Основная наша специализация - производство
-							огнестойкого кабеля для систем противопожарной защиты. Также изготавливаем греющий провод (бетон
-							прогрев),
-							телефония, видеонаблюдение .</p>
-						<p>Мы собрали команду квалифицированных профессионалов рынка электро-технических
-							товаров для реализации ключевой миссии: спасение жизни людей, за счет изготовления высокотехнологичной и
-							экологичной кабельно-проводниковой продукции, отвечающей всем нормам эксплуатации и безопасности.</p>
-						<p>Основными
-							принципами компании являются: честное ведение бизнеса, индивидуальный подход к каждому клиенту,
-							доступная
-							цена
-							кабеля, контроль каждого этапа производства.</p>
-						<p>Заботясь о качестве выпускаемой продукции, мы закупаем сырье
-							только у крупных предприятий-поставщиков меди, стали и пластиката.</p>
-						<p>Собственная лаборатория и многоступенчатый
-							контроль качества – обеспечивают для вас соответствие изделий по ГОСТу.</p>
-					</div>
-					<div class="about-about__img">
-						<img src="img/glav/about.jpg" alt="">
-					</div>
+		<div class="about-tabs _tabs">
+			<div class="submenu about-item-tabs">
+				<div class="submenu__inner">
+					<ul class="submenu__list">
+						<li class="submenu__item">
+							<a href="#" class="submenu__link _tabs-item _active">
+								о нас
+							</a>
+						</li>
+						<li class="submenu__item">
+							<a href="#" class="submenu__link _tabs-item ">
+								Новости
+							</a>
+						</li>
+						<li class="submenu__item">
+							<a href="#" class="submenu__link _tabs-item ">
+								Галерея
+							</a>
+						</li>
+						<li class="submenu__item">
+							<a href="#" class="submenu__link _tabs-item">
+								Вакансии
+							</a>
+						</li>
+						<li class="submenu__item">
+							<a href="#" class="submenu__link _tabs-item">
+								статьи
+							</a>
+						</li>
+						<li class="submenu__item">
+							<a href="#" class="submenu__link _tabs-item">
+								Партнеры
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
-			<div id="about-news" class="about-news tab-item-about">
-				<h4 class="title">новости</h4>
-				<div class="about-news__inner">
-					<p>данный раздел находится в разработке.</p>
-				</div>
-			</div>
-			<div id="about-gallery" class="about-gallery tab-item-about">
-				<h4 class="title">Галерея</h4>
-				<div class="about-gallery__inner">
-					<div class="about-gallery__items">
-						<div class="about-gallery__items-body _swiper">
-							<div class="about-gallery__item _ibg">
-								<img src="img/glav/slide.jpg" alt="">
-							</div>
-							<div class="about-gallery__item _ibg">
-								<img src="img/glav/slide.jpg" alt="">
-							</div>
-							<div class="about-gallery__item _ibg">
-								<img src="img/glav/slide.jpg" alt="">
-							</div>
-							<div class="about-gallery__item _ibg">
-								<img src="img/glav/slide.jpg" alt="">
-							</div>
-							<div class="about-gallery__item _ibg">
-								<img src="img/glav/slide.jpg" alt="">
-							</div>
+			<div class="about-tabs__body">
+				<div id="about-about" class="about-about tab-item-about _tabs-block _active">
+					<h4 class="title">о нас</h4>
+					<div class="about-about__inner">
+						<div class="about-about__text">
+							<p>ООО «Спецресурс» - динамично развивающийся кабельный завод. Основная наша специализация - производство
+								огнестойкого кабеля для систем противопожарной защиты. Также изготавливаем греющий провод (бетон
+								прогрев),
+								телефония, видеонаблюдение .</p>
+							<p>Мы собрали команду квалифицированных профессионалов рынка электро-технических
+								товаров для реализации ключевой миссии: спасение жизни людей, за счет изготовления высокотехнологичной и
+								экологичной кабельно-проводниковой продукции, отвечающей всем нормам эксплуатации и безопасности.</p>
+							<p>Основными
+								принципами компании являются: честное ведение бизнеса, индивидуальный подход к каждому клиенту,
+								доступная
+								цена
+								кабеля, контроль каждого этапа производства.</p>
+							<p>Заботясь о качестве выпускаемой продукции, мы закупаем сырье
+								только у крупных предприятий-поставщиков меди, стали и пластиката.</p>
+							<p>Собственная лаборатория и многоступенчатый
+								контроль качества – обеспечивают для вас соответствие изделий по ГОСТу.</p>
 						</div>
-						<div class="about-gallery__navigation">
-							<div class="about-gallery__arrows about-gallery__arrow-prev">
-								<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M7.4 17L1 9L7.4 1" stroke="#000" />
-								</svg>
-							</div>
-							<div class="about-gallery__dots"></div>
-							<div class="about-gallery__arrows about-gallery__arrow-next">
-								<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M0.399806 0.999999L6.79981 9L0.399804 17" stroke="#000" />
-								</svg>
-							</div>
+						<div class="about-about__img">
+							<img src="img/glav/about.jpg" alt="">
 						</div>
 					</div>
 				</div>
-			</div>
-			<div id="about-vacancies" class="about-vacancies tab-item-about">
-				<h4 class="title">вакансии</h4>
-				<div class="about-vacancies__inner">
-					<p class="about-vacancies__text">
-						в данный момент у нас нет активных вакансий
-					</p>
-					<div class="about-vacancies__img">
-						<img src="img/about/vacancies.jpg" alt="">
+				<div id="about-news" class="about-news tab-item-about _tabs-block">
+					<h4 class="title">новости</h4>
+					<div class="about-news__inner">
+						<p>данный раздел находится в разработке.</p>
 					</div>
 				</div>
-			</div>
-			<div id="about-articles" class="about-articles tab-item-about">
-				<h4 class="title">статьи</h4>
-				<div class="about-articles__inner">
-					<div class="about-articles__prev">
-						<div class="about-articles__prev-box">
-							<div class="about-articles__prev-title">
-								Основные виды медного кабеля и Их применение
+				<div id="about-gallery" class="about-gallery tab-item-about _tabs-block">
+					<h4 class="title">Галерея</h4>
+					<div class="about-gallery__inner">
+						<div class="about-gallery__items">
+							<div class="about-gallery__items-body _swiper">
+								<div class="about-gallery__item _ibg">
+									<img src="img/glav/slide.jpg" alt="">
+								</div>
+								<div class="about-gallery__item _ibg">
+									<img src="img/glav/slide.jpg" alt="">
+								</div>
+								<div class="about-gallery__item _ibg">
+									<img src="img/glav/slide.jpg" alt="">
+								</div>
+								<div class="about-gallery__item _ibg">
+									<img src="img/glav/slide.jpg" alt="">
+								</div>
+								<div class="about-gallery__item _ibg">
+									<img src="img/glav/slide.jpg" alt="">
+								</div>
 							</div>
-							<p class="about-articles__prev-text">
-								Связавшись с электромонтажом на своем собственном участке или в собственной квартире, можно очень
-								скоро
-								заметить, что кабели и провода, используемые в монтаже – преимущественно медные, реже алюминиевые.
-								используемые в монтаже – преимущественно медные, реже алюминиевые.
-							</p>
-							<a href="#" class="about-articles__prev-link">
-								читать статью
-							</a>
-						</div>
-						<div class="about-articles__prev-img">
-							<img src="img/about/prev-articles.jpg" alt="">
-						</div>
-					</div>
-					<div class="about-articles__slider slider-about-articles">
-						<div class="slider-about-articles__body _swiper">
-							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-1.png);"></div>
-								<div class="about-articles__slide--title">
-									Таблица проводов
+							<div class="about-gallery__navigation">
+								<div class="about-gallery__arrows about-gallery__arrow-prev">
+									<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M7.4 17L1 9L7.4 1" stroke="#000" />
+									</svg>
 								</div>
-							</a>
-							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
-								<div class="about-articles__slide--title">
-									Соответствие аналогов марок кабеля
+								<div class="about-gallery__dots"></div>
+								<div class="about-gallery__arrows about-gallery__arrow-next">
+									<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.399806 0.999999L6.79981 9L0.399804 17" stroke="#000" />
+									</svg>
 								</div>
-							</a>
-							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-3.png);"></div>
-								<div class="about-articles__slide--title">
-									Сечение кабеля и диаметр: в чем различие?
-								</div>
-							</a>
-							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-4.png);"></div>
-								<div class="about-articles__slide--title">
-									Сечение кабеля и диаметр: в чем различие?
-								</div>
-							</a>
-							<a href="#" class="about-articles__slide">
-								<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
-								<div class="about-articles__slide--title">
-									Соответствие аналогов марок кабеля
-								</div>
-							</a>
-						</div>
-						<div class="slider-about-articles__navigation">
-							<div class="slider-about-articles__arrows slider-about-articles__arrow-prev">
-								<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M7.4 17L1 9L7.4 1" stroke="#000" />
-								</svg>
-							</div>
-							<div class="slider-about-articles__dots"></div>
-							<div class="slider-about-articles__arrows slider-about-articles__arrow-next">
-								<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M0.399806 0.999999L6.79981 9L0.399804 17" stroke="#000" />
-								</svg>
 							</div>
 						</div>
 					</div>
-					<a href="#" class="about-articles__link"> Посмотреть все статьи</a>
 				</div>
-			</div>
-			<div id="about-partners" class="about-partners tab-item-about">
-				<h4 class="title">Партнеры</h4>
-				<div class="about-partners__inner">
-					<p>данный раздел находится в разработке.</p>
+				<div id="about-vacancies" class="about-vacancies tab-item-about _tabs-block">
+					<h4 class="title">вакансии</h4>
+					<div class="about-vacancies__inner">
+						<p class="about-vacancies__text">
+							в данный момент у нас нет активных вакансий
+						</p>
+						<div class="about-vacancies__img">
+							<img src="img/about/vacancies.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div id="about-articles" class="about-articles tab-item-about _tabs-block">
+					<h4 class="title">статьи</h4>
+					<div class="about-articles__inner">
+						<div class="about-articles__prev">
+							<div class="about-articles__prev-box">
+								<div class="about-articles__prev-title">
+									Основные виды медного кабеля и Их применение
+								</div>
+								<p class="about-articles__prev-text">
+									Связавшись с электромонтажом на своем собственном участке или в собственной квартире, можно очень
+									скоро
+									заметить, что кабели и провода, используемые в монтаже – преимущественно медные, реже алюминиевые.
+									используемые в монтаже – преимущественно медные, реже алюминиевые.
+								</p>
+								<a href="#" class="about-articles__prev-link">
+									читать статью
+								</a>
+							</div>
+							<div class="about-articles__prev-img">
+								<img src="img/about/prev-articles.jpg" alt="">
+							</div>
+						</div>
+						<div class="about-articles__slider slider-about-articles">
+							<div class="slider-about-articles__body _swiper">
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-1.png);"></div>
+									<div class="about-articles__slide--title">
+										Таблица проводов
+									</div>
+								</a>
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
+									<div class="about-articles__slide--title">
+										Соответствие аналогов марок кабеля
+									</div>
+								</a>
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-3.png);"></div>
+									<div class="about-articles__slide--title">
+										Сечение кабеля и диаметр: в чем различие?
+									</div>
+								</a>
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-4.png);"></div>
+									<div class="about-articles__slide--title">
+										Сечение кабеля и диаметр: в чем различие?
+									</div>
+								</a>
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
+									<div class="about-articles__slide--title">
+										Соответствие аналогов марок кабеля
+									</div>
+								</a>
+							</div>
+							<div class="slider-about-articles__navigation">
+								<div class="slider-about-articles__arrows slider-about-articles__arrow-prev">
+									<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M7.4 17L1 9L7.4 1" stroke="#000" />
+									</svg>
+								</div>
+								<div class="slider-about-articles__dots"></div>
+								<div class="slider-about-articles__arrows slider-about-articles__arrow-next">
+									<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.399806 0.999999L6.79981 9L0.399804 17" stroke="#000" />
+									</svg>
+								</div>
+							</div>
+						</div>
+						<a href="#" class="about-articles__link"> Посмотреть все статьи</a>
+					</div>
+				</div>
+				<div id="about-partners" class="about-partners tab-item-about _tabs-block">
+					<h4 class="title">Партнеры</h4>
+					<div class="about-partners__inner">
+						<p>данный раздел находится в разработке.</p>
+					</div>
 				</div>
 			</div>
 		</div>
