--- a/#src/_header.html
+++ b/#src/_header.html
@@ -7,29 +7,36 @@
 			<a class="header__phone" href="tel:84993506413">
 				8 499 350 64 13
 			</a>
-			<nav class="header__menu">
-				<ul class="header__menu-list">
-					<li class="header__menu-item">
-						<a href="#" class="header__menu-link active">
-							О компании
-						</a>
-					</li>
-					<li class="header__menu-item">
-						<a href="#" class="header__menu-link">
-							Каталог
-						</a>
-					</li>
-					<li class="header__menu-item">
-						<a href="#" class="header__menu-link">
-							Информация
-						</a>
-					</li>
-					<li class="header__menu-item">
-						<a href="#" class="header__menu-link">
-							Контакты
-						</a>
-					</li>
-				</ul>
+			<nav class="header__menu menu">
+				<div class="menu__icon icon-menu">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<nav class="menu__body">
+					<ul class="header__menu-list">
+						<li class="header__menu-item">
+							<a href="#" class="header__menu-link active">
+								О компании
+							</a>
+						</li>
+						<li class="header__menu-item">
+							<a href="#" class="header__menu-link">
+								Каталог
+							</a>
+						</li>
+						<li class="header__menu-item">
+							<a href="#" class="header__menu-link">
+								Услуги
+							</a>
+						</li>
+						<li class="header__menu-item">
+							<a href="#" class="header__menu-link">
+								Контакты
+							</a>
+						</li>
+					</ul>
+				</nav>
 			</nav>
 		</div>
 	</div>
