--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -157,6 +157,7 @@
 		<a href="#" class="footer__police">Политика конфиденциальности и обработки персональных данных</a>
 	</div>
 </footer>
+</div>
 <script src="js/vendors.min.js"></script>
 <script src="js/script.min.js"></script>
 </body>
