--- a/#src/_header.html
+++ b/#src/_header.html
@@ -4,7 +4,7 @@
 			<div class="header__logo">
 				<img src="img/logo.png" alt="">
 			</div>
-			<a class="header__phone" href="tel:84993506413">
+			<a data-da="header__menu-list, last, 570" class="header__phone" href="tel:84993506413">
 				8 499 350 64 13
 			</a>
 			<nav class="header__menu menu">
