--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -95,7 +95,7 @@
 				</nav>
 			</div>
 			<div class="footer__item footer__info">
-				<div class="footer__item-title">Информация</div>
+				<div class="footer__item-title">Услуги</div>
 				<nav class="footer__menu">
 					<ul class="footer__menu-list">
 						<li class="footer__menu-item">
