--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -26,8 +26,8 @@
 	<div class="container">
 		<div class="footer__inner">
 			<div class="footer__item">
-				<div class="footer__item-title">О компании</div>
-				<nav class="footer__menu">
+				<div class="footer__item-title ">О компании</div>
+				<nav class="footer__menu ">
 					<ul class="footer__menu-list">
 						<li class="footer__menu-item">
 							<a href="#" class="footer__menu-link">
@@ -122,8 +122,8 @@
 				</nav>
 			</div>
 			<div class="footer__item footer__contacts">
-				<div class="footer__item-title">Контакты</div>
-				<nav class="footer__menu">
+				<div class="footer__item-title _active">Контакты</div>
+				<nav class="footer__menu _active">
 					<ul class="footer__menu-list">
 						<li class="footer__menu-item">
 							<a href="tel:74993506413" class="footer__menu-link">
