--- a/#src/index.html
+++ b/#src/index.html
@@ -57,6 +57,18 @@
 						для видеонаблюдения
 					</div>
 				</div>
+				<div class="products__item">
+					<div class="products__bg" style="background-image: url(img/glav/products/cabel-2.png);"></div>
+					<div class="products__item-title">
+						Провода телефонные, радиотрансляционные и распределительные
+					</div>
+				</div>
+				<div class="products__item">
+					<div class="products__bg" style="background-image: url(img/glav/products/cabel-1.png);"></div>
+					<div class="products__item-title">
+						Кабели для систем охранно- пожарной сигнализации
+					</div>
+				</div>
 			</div>
 			<a href="#" class="products__btn">Смотреть всё</a>
 		</div>
