--- a/#src/_header.html
+++ b/#src/_header.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="header__inner">
 			<div class="header__logo">
-				<img src="img/logo.png" alt="">
+				<img src="img/logo.svg" alt="">
 			</div>
 			<a data-da="header__menu-list, last, 570" class="header__phone" href="tel:84993506413">
 				8 499 350 64 13
