--- a/#src/index.html
+++ b/#src/index.html
@@ -32,43 +32,43 @@
 		<h4 class="title">наша продукция</h4>
 		<div class="products__inner">
 			<div class="products__items">
-				<div class="products__item">
+				<a href="#" class="products__item">
 					<div class="products__bg" style="background-image: url(img/glav/products/cabel-1.png);"></div>
 					<div class="products__item-title">
 						Кабели для систем охранно- пожарной сигнализации
 					</div>
-				</div>
-				<div class="products__item">
+				</a>
+				<a href="#" class="products__item">
 					<div class="products__bg" style="background-image: url(img/glav/products/cabel-2.png);"></div>
 					<div class="products__item-title">
 						Провода телефонные, радиотрансляционные и распределительные
 					</div>
-				</div>
-				<div class="products__item">
+				</a>
+				<a href="#" class="products__item">
 					<div class="products__bg" style="background-image: url(img/glav/products/cabel-3.png);"></div>
 					<div class="products__item-title">
 						Прогревочный кабели
 					</div>
-				</div>
-				<div class="products__item">
+				</a>
+				<a href="#" class="products__item">
 					<div class="products__bg" style="background-image: url(img/glav/products/cabel-4.png);"></div>
 					<div class="products__item-title">
 						Кабели комбинированные
 						для видеонаблюдения
 					</div>
-				</div>
-				<div class="products__item">
+				</a>
+				<a href="#" class="products__item">
 					<div class="products__bg" style="background-image: url(img/glav/products/cabel-2.png);"></div>
 					<div class="products__item-title">
 						Провода телефонные, радиотрансляционные и распределительные
 					</div>
-				</div>
-				<div class="products__item">
+				</a>
+				<a href="#" class="products__item">
 					<div class="products__bg" style="background-image: url(img/glav/products/cabel-1.png);"></div>
 					<div class="products__item-title">
 						Кабели для систем охранно- пожарной сигнализации
 					</div>
-				</div>
+				</a>
 			</div>
 			<a href="#" class="products__btn">Смотреть всё</a>
 		</div>
@@ -93,7 +93,7 @@
 								КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
 							</div>
 						</div>
-						<div class="sale-slider__img">
+						<div class="sale-slider__img _ibg">
 							<img src="img/glav/slide.jpg" alt="">
 						</div>
 					</div>
@@ -107,7 +107,7 @@
 								КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
 							</div>
 						</div>
-						<div class="sale-slider__img">
+						<div class="sale-slider__img _ibg">
 							<img src="img/glav/slide.jpg" alt="">
 						</div>
 					</div>
@@ -121,7 +121,7 @@
 								КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
 							</div>
 						</div>
-						<div class="sale-slider__img">
+						<div class="sale-slider__img _ibg">
 							<img src="img/glav/slide.jpg" alt="">
 						</div>
 					</div>
@@ -135,7 +135,7 @@
 								КВК-В-2 2×0.75 кабель разномеры от 13 р/м вместо 14 р/м
 							</div>
 						</div>
-						<div class="sale-slider__img">
+						<div class="sale-slider__img _ibg">
 							<img src="img/glav/slide.jpg" alt="">
 						</div>
 					</div>
