home adaptive end

--- a/#src/index.html
+++ b/#src/index.html
@@ -181,88 +181,70 @@
 	</div>
 </section>
 
-<section class="count">
+<section class="partners">
 	<div class="container">
-		<div class="count__inner">
-			<div class="count__item">
-				<div class="count__number">535</div>
-				<div class="count__title">
-					партнеров в России
-					и ближайшем зарубежье
+		<div class="partners__inner">
+			<div class="partners__body _swiper">
+				<div class="partners__item">
+					<img src="img/logo-part/abb.jpg" alt="">
+				</div>
+				<div class="partners__item">
+					<img src="img/logo-part/chint.jpg" alt="">
+				</div>
+				<div class="partners__item">
+					<img src="img/logo-part/control.png" alt="">
+				</div>
+				<div class="partners__item">
+					<img src="img/logo-part/eaton.jpg" alt="">
+				</div>
+				<div class="partners__item">
+					<img src="img/logo-part/lapp.jpg" alt="">
+				</div>
+				<div class="partners__item">
+					<img src="img/logo-part/leroy-somer.jpg" alt="">
+				</div>
+				<div class="partners__item">
+					<img src="img/logo-part/nidec.jpg" alt="">
+				</div>
+				<div class="partners__item">
+					<img src="img/logo-part/oben.jpg" alt="">
+				</div>
+				<div class="partners__item">
+					<img src="img/logo-part/siemens.jpg" alt="">
 				</div>
 			</div>
-			<div class="count__item">
-				<div class="count__number">761</div>
-				<div class="count__title">
-					километров кабеля
-					в наличии
+			<div class="partners__navigation">
+				<div class="partners__arrows partners__arrow-prev">
+					<svg xmlns="http://www.w3.org/2000/svg" width="33" height="29">
+						<defs>
+							<clipPath id="a">
+								<path fill="#fff" d="M0 29V0h33v29zm3.009-9.197h12.42v5.688l14.574-10.99L15.43 3.511v5.688H3.01z" />
+							</clipPath>
+						</defs>
+						<path fill="#fff" d="M3.009 19.803h12.42v5.688l14.574-10.99L15.43 3.511v5.688H3.01z" />
+						<path fill="none" stroke="#039812" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20"
+							stroke-width="6" d="M3.009 19.803v0h12.42v5.688l14.574-10.99v0L15.43 3.511v5.688H3.01v0z"
+							clip-path="url(&quot;#a&quot;)" />
+					</svg>
 				</div>
-			</div>
-			<div class="count__item">
-				<div class="count__number">426</div>
-				<div class="count__title">
-					макроразмеров
-				</div>
-			</div>
-			<div class="count__item">
-				<div class="count__number">>122</div>
-				<div class="count__title">
-					тысяч километров проехала
-					машина доставки
+
+				<div class="partners__arrows partners__arrow-next">
+					<svg xmlns="http://www.w3.org/2000/svg" width="33" height="29">
+						<defs>
+							<clipPath id="a">
+								<path fill="#fff" d="M0 29V0h33v29zm3.009-9.197h12.42v5.688l14.574-10.99L15.43 3.511v5.688H3.01z" />
+							</clipPath>
+						</defs>
+						<path fill="#fff" d="M3.009 19.803h12.42v5.688l14.574-10.99L15.43 3.511v5.688H3.01z" />
+						<path fill="none" stroke="#039812" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20"
+							stroke-width="6" d="M3.009 19.803v0h12.42v5.688l14.574-10.99v0L15.43 3.511v5.688H3.01v0z"
+							clip-path="url(&quot;#a&quot;)" />
+					</svg>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section class="trust">
-	<div class="container">
-		<h4 class="title">Нам доверяют</h4>
-		<p class="trust__text">
-			Индивидуальный подход, гибкое производство, безупречное качество продукции и сервиса позволяют нам получать
-			клиентов, которые становятся постоянными партнёрами
-		</p>
-		<div class="trust__items">
-			<div class="trust__items-body _swiper">
-				<div class="trust__item _ibg">
-					<img src="img/glav/trust/1.jpg" alt="">
-				</div>
-				<div class="trust__item _ibg">
-					<img src="img/glav/trust/1.jpg" alt="">
-				</div>
-				<div class="trust__item _ibg">
-					<img src="img/glav/trust/1.jpg" alt="">
-				</div>
-				<div class="trust__item _ibg">
-					<img src="img/glav/trust/1.jpg" alt="">
-				</div>
-				<div class="trust__item _ibg">
-					<img src="img/glav/trust/1.jpg" alt="">
-				</div>
-				<div class="trust__item _ibg">
-					<img src="img/glav/trust/1.jpg" alt="">
-				</div>
-				<div class="trust__item _ibg">
-					<img src="img/glav/trust/1.jpg" alt="">
-				</div>
-				<div class="trust__item _ibg">
-					<img src="img/glav/trust/1.jpg" alt="">
-				</div>
-			</div>
-			<div class="trust__items-navigation">
-				<div class="trust__items-arrows trust__items-arrow-prev">
-					<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M7.4 17L1 9L7.4 1" stroke="#000" />
-					</svg>
-				</div>
-				<div class="trust__items-dots"></div>
-				<div class="trust__items-arrows trust__items-arrow-next">
-					<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M0.399806 0.999999L6.79981 9L0.399804 17" stroke="#000" />
-					</svg>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+
 @@include('_footer.html')
