--- a/#src/about.html
+++ b/#src/about.html
@@ -141,12 +141,12 @@
 									читать статью
 								</a>
 							</div>
-							<div class="about-articles__prev-img">
+							<div class="about-articles__prev-img" data-da="about-articles__prev-box, 1, 991,98">
 								<img src="img/about/prev-articles.jpg" alt="">
 							</div>
 						</div>
 						<div class="about-articles__slider slider-about-articles">
-							<div class="slider-about-articles__body _swiper">
+							<div class="slider-about-articles__body">
 								<a href="#" class="about-articles__slide">
 									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-1.png);"></div>
 									<div class="about-articles__slide--title">
@@ -171,25 +171,12 @@
 										Сечение кабеля и диаметр: в чем различие?
 									</div>
 								</a>
-								<a href="#" class="about-articles__slide">
+								<!-- <a href="#" class="about-articles__slide">
 									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
 									<div class="about-articles__slide--title">
 										Соответствие аналогов марок кабеля
 									</div>
-								</a>
-							</div>
-							<div class="slider-about-articles__navigation">
-								<div class="slider-about-articles__arrows slider-about-articles__arrow-prev">
-									<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M7.4 17L1 9L7.4 1" stroke="#000" />
-									</svg>
-								</div>
-								<div class="slider-about-articles__dots"></div>
-								<div class="slider-about-articles__arrows slider-about-articles__arrow-next">
-									<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M0.399806 0.999999L6.79981 9L0.399804 17" stroke="#000" />
-									</svg>
-								</div>
+								</a> -->
 							</div>
 						</div>
 						<a href="#" class="about-articles__link"> Посмотреть все статьи</a>
