--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -12,37 +12,49 @@
 		<div class="catalog__tabs tabs-catalog _tabs">
 			<ul class="tabs-catalog__header">
 				<li>
-					<a href="" class="tabs-catalog__item _tabs-item _active">
+					<a href="" class="tabs-catalog__item _tabs-item _ibg _active">
 						<img src="img/catalog/01.jpg" alt="">
 						<span>ЭЛЕКТРОПРИВОД</span>
 					</a>
 				</li>
 				<li>
-					<a href="" class="tabs-catalog__item _tabs-item">
+					<a href="" class="tabs-catalog__item _ibg _tabs-item">
 						<img src="img/catalog/01.jpg" alt="">
 						<span>ЭЛЕКТРОДВИГАТЕЛИ</span>
 					</a>
 				</li>
 				<li>
-					<a href="" class="tabs-catalog__item _tabs-item">
+					<a href="" class="tabs-catalog__item _ibg _tabs-item">
 						<img src="img/catalog/01.jpg" alt="">
 						<span>КАБЕЛЬ, ПРОВОД И АКСЕССУАРЫ</span>
 					</a>
 				</li>
 				<li>
-					<a href="" class="tabs-catalog__item _tabs-item">
+					<a href="" class="tabs-catalog__item _ibg _tabs-item">
 						<img src="img/catalog/01.jpg" alt="">
 						<span>УСТРОЙСТВА УПРАВЛЕНИЯ И СИГНАЛИЗАЦИИ</span>
 					</a>
 				</li>
 				<li>
-					<a href="" class="tabs-catalog__item _tabs-item">
+					<a href="" class="tabs-catalog__item _ibg _tabs-item">
 						<img src="img/catalog/01.jpg" alt="">
 						<span>ДЛЯ УПРАВЛЕНИЯ И ЗАЩИТЫ ЭЛЕКТРОДВИГАТЕЛЕМ</span>
 					</a>
 				</li>
 				<li>
-					<a href="" class="tabs-catalog__item _tabs-item">
+					<a href="" class="tabs-catalog__item _ibg _tabs-item">
+						<img src="img/catalog/01.jpg" alt="">
+						<span>ДЛЯ РАСПРЕДЕЛЕНИЯ ЭЛЕКТРОЭНЕРГИИ</span>
+					</a>
+				</li>
+				<li>
+					<a href="" class="tabs-catalog__item _ibg _tabs-item">
+						<img src="img/catalog/01.jpg" alt="">
+						<span>ДЛЯ УПРАВЛЕНИЯ И ЗАЩИТЫ ЭЛЕКТРОДВИГАТЕЛЕМ</span>
+					</a>
+				</li>
+				<li>
+					<a href="" class="tabs-catalog__item _ibg _tabs-item">
 						<img src="img/catalog/01.jpg" alt="">
 						<span>ДЛЯ РАСПРЕДЕЛЕНИЯ ЭЛЕКТРОЭНЕРГИИ</span>
 					</a>
@@ -108,6 +120,140 @@
 							</div>
 						</div>
 					</nav>
+				</div>
+
+				<div class="tabs-catalog__content _tabs-block">
+					<ul class="tabs-catalog__subheader subheader-tabs-catalog">
+						<li>
+							<a href="#" class="subheader-tabs-catalog__item active"
+								data-tabs-subbody="subbody-tabs-catalog__content-1">СЕРВО</a>
+						</li>
+						<li>
+							<a href="#" class="subheader-tabs-catalog__item "
+								data-tabs-subbody="subbody-tabs-catalog__content-2">АСИНХРОННЫЙ</a>
+						</li>
+						<li>
+							<a href="#" class="subheader-tabs-catalog__item"
+								data-tabs-subbody="subbody-tabs-catalog__content-3">ПОСТОЯННОГО ТОКА</a>
+						</li>
+					</ul>
+					<ul class="tabs-catalog__subbody subbody-tabs-catalog">
+						<li>
+							<div id="subbody-tabs-catalog__content-1" class="subbody-tabs-catalog__content active">
+								<div class="subbody-tabs-catalog__column">
+									<a href="#" class="subbody-tabs-catalog__link">Все сразу</a>
+									<a href="#" class="subbody-tabs-catalog__link">Control Techniques</a>
+									<a href="#" class="subbody-tabs-catalog__link">ABB</a>
+									<a href="#" class="subbody-tabs-catalog__link">СHINT</a>
+									<a href="#" class="subbody-tabs-catalog__link">ОВЕН</a>
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<img src="img/catalog/02.jpg" alt="">
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<div class="subbody-tabs-catalog__seria">Серии</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div id="subbody-tabs-catalog__content-2" class="subbody-tabs-catalog__content">
+								<div class="subbody-tabs-catalog__column">
+									<a href="#" class="subbody-tabs-catalog__link">Все сразу</a>
+									<a href="#" class="subbody-tabs-catalog__link">ОВЕН</a>
+									<a href="#" class="subbody-tabs-catalog__link">ABB</a>
+									<a href="#" class="subbody-tabs-catalog__link">СHINT</a>
+									<a href="#" class="subbody-tabs-catalog__link">ОВЕН</a>
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<img src="img/catalog/02.jpg" alt="">
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<div class="subbody-tabs-catalog__seria">Серии</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div id="subbody-tabs-catalog__content-3" class="subbody-tabs-catalog__content">
+								<div class="subbody-tabs-catalog__column">
+									<a href="#" class="subbody-tabs-catalog__link">Все сразу</a>
+									<a href="#" class="subbody-tabs-catalog__link">СHINT</a>
+									<a href="#" class="subbody-tabs-catalog__link">Control Techniques</a>
+									<a href="#" class="subbody-tabs-catalog__link">ABB</a>
+									<a href="#" class="subbody-tabs-catalog__link">ОВЕН</a>
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<img src="img/catalog/02.jpg" alt="">
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<div class="subbody-tabs-catalog__seria">Серии</div>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+
+				<div class="tabs-catalog__content _tabs-block">
+					<ul class="tabs-catalog__subheader subheader-tabs-catalog">
+						<li><a href="#" class="subheader-tabs-catalog__item active"
+								data-tabs-subbody="subbody-tabs-catalog__content-1">АСИНХРОННЫЙ</a></li>
+						<li><a href="#" class="subheader-tabs-catalog__item"
+								data-tabs-subbody="subbody-tabs-catalog__content-2">СЕРВО</a></li>
+						<li><a href="#" class="subheader-tabs-catalog__item"
+								data-tabs-subbody="subbody-tabs-catalog__content-3">ПОСТОЯННОГО ТОКА</a></li>
+					</ul>
+					<ul class="tabs-catalog__subbody subbody-tabs-catalog">
+						<li>
+							<div id="subbody-tabs-catalog__content-1" class="subbody-tabs-catalog__content active">
+								<div class="subbody-tabs-catalog__column">
+									<a href="#" class="subbody-tabs-catalog__link">Все сразу</a>
+									<a href="#" class="subbody-tabs-catalog__link">Control Techniques</a>
+									<a href="#" class="subbody-tabs-catalog__link">ABB</a>
+									<a href="#" class="subbody-tabs-catalog__link">СHINT</a>
+									<a href="#" class="subbody-tabs-catalog__link">ОВЕН</a>
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<img src="img/catalog/02.jpg" alt="">
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<div class="subbody-tabs-catalog__seria">Серии</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div id="subbody-tabs-catalog__content-2" class="subbody-tabs-catalog__content">
+								<div class="subbody-tabs-catalog__column">
+									<a href="#" class="subbody-tabs-catalog__link">Все сразу</a>
+									<a href="#" class="subbody-tabs-catalog__link">ОВЕН</a>
+									<a href="#" class="subbody-tabs-catalog__link">ABB</a>
+									<a href="#" class="subbody-tabs-catalog__link">СHINT</a>
+									<a href="#" class="subbody-tabs-catalog__link">ОВЕН</a>
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<img src="img/catalog/02.jpg" alt="">
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<div class="subbody-tabs-catalog__seria">Серии</div>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div id="subbody-tabs-catalog__content-3" class="subbody-tabs-catalog__content">
+								<div class="subbody-tabs-catalog__column">
+									<a href="#" class="subbody-tabs-catalog__link">Все сразу</a>
+									<a href="#" class="subbody-tabs-catalog__link">СHINT</a>
+									<a href="#" class="subbody-tabs-catalog__link">Control Techniques</a>
+									<a href="#" class="subbody-tabs-catalog__link">ABB</a>
+									<a href="#" class="subbody-tabs-catalog__link">ОВЕН</a>
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<img src="img/catalog/02.jpg" alt="">
+								</div>
+								<div class="subbody-tabs-catalog__column">
+									<div class="subbody-tabs-catalog__seria">Серии</div>
+								</div>
+							</div>
+						</li>
+					</ul>
 				</div>
 
 				<div class="tabs-catalog__content _tabs-block">
