--- a/#src/subcatalog.html
+++ b/#src/subcatalog.html
@@ -5,12 +5,217 @@
 @@include('_header.html')
 <section class="subcatalog">
 	<div class="container">
-		@@include('_breadcrums.html')
-		<h1 class="subcatalog__title">
-			ЭЛЕКТРОПРИВОД АСИНХРОННЫЙ
-		</h1>
 		<div class="subcatalog__row">
-			<aside class="subcatalog__seria seria-subcatalog">
+			<aside class="subcatalog__aside">
+				<nav class="subcatalog__menu menu-subcatalog">
+					<div class="menu-subcatalog__header">
+						<div class="menu-subcatalog__title">Каталог товаров</div>
+						<div class="menu-subcatalog__burger">
+							<div class="menu-subcatalog__lines">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+						</div>
+					</div>
+					<div class="menu-subcatalog__body">
+						<ul class="menu-subcatalog__list">
+							<li class="menu-subcatalog__parent">
+								<a href="#" class="menu-subcatalog__link">
+									ЭЛЕКТРОПРИВОД
+								</a>
+								<div class="menu-subcatalog__submenu submenu-subcatalog">
+									<ul class="submenu-subcatalog__menu">
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="menu-subcatalog__parent">
+								<a href="#" class="menu-subcatalog__link">
+									ЭЛЕКТРОДВИГАТЕЛИ
+								</a>
+								<div class="menu-subcatalog__submenu submenu-subcatalog">
+									<ul class="submenu-subcatalog__menu">
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="menu-subcatalog__parent">
+								<a href="#" class="menu-subcatalog__link">
+									КАБЕЛЬ, ПРОВОД И АКСЕССУАРЫ
+								</a>
+								<div class="menu-subcatalog__submenu submenu-subcatalog">
+									<ul class="submenu-subcatalog__menu">
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="menu-subcatalog__parent">
+								<a href="#" class="menu-subcatalog__link">
+									УСТРОЙСТВА УПРАВЛЕНИЯ И СИГНАЛИЗАЦИИ
+								</a>
+								<div class="menu-subcatalog__submenu submenu-subcatalog">
+									<ul class="submenu-subcatalog__menu">
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="menu-subcatalog__parent">
+								<a href="#" class="menu-subcatalog__link">
+									ДЛЯ УПРАВЛЕНИЯ И ЗАЩИТЫ ЭЛЕКТРОДВИГАТЕЛЕМ
+								</a>
+								<div class="menu-subcatalog__submenu submenu-subcatalog">
+									<ul class="submenu-subcatalog__menu">
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="menu-subcatalog__parent">
+								<a href="#" class="menu-subcatalog__link">
+									ДЛЯ РАСПРЕДЕЛЕНИЯ ЭЛЕКТРОЭНЕРГИИ
+								</a>
+								<div class="menu-subcatalog__submenu submenu-subcatalog">
+									<ul class="submenu-subcatalog__menu">
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="menu-subcatalog__parent">
+								<a href="#" class="menu-subcatalog__link">
+									ДЛЯ УПРАВЛЕНИЯ И ЗАЩИТЫ ЭЛЕКТРОДВИГАТЕЛЕМ
+								</a>
+								<div class="menu-subcatalog__submenu submenu-subcatalog">
+									<ul class="submenu-subcatalog__menu">
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="menu-subcatalog__parent">
+								<a href="#" class="menu-subcatalog__link">
+									ДЛЯ РАСПРЕДЕЛЕНИЯ ЭЛЕКТРОЭНЕРГИИ
+								</a>
+								<div class="menu-subcatalog__submenu submenu-subcatalog">
+									<ul class="submenu-subcatalog__menu">
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</nav>
+
 				<div class="seria-subcatalog__sidebar">
 					<div class="seria-subcatalog__title">
 						Серия
@@ -59,6 +264,9 @@
 
 			</aside>
 			<div class="subcatalog__content content-subcatalog">
+				<h1 class="subcatalog__title">
+					ЭЛЕКТРОПРИВОД АСИНХРОННЫЙ
+				</h1>
 				<h2 class="content-subcatalog__title">
 					Асинхронный преобразователь частоты
 				</h2>
