--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,9 +1,9 @@
 <header class="header">
 	<div class="container">
 		<div class="header__inner">
-			<div class="header__logo">
+			<a href="#" class="header__logo">
 				<img src="img/logo.svg" alt="">
-			</div>
+			</a>
 			<a data-da="header__menu-list, last, 570" class="header__phone" href="tel:84993506413">
 				8 499 350 64 13
 			</a>
