--- a/#src/subcatalog.html
+++ b/#src/subcatalog.html
@@ -26,10 +26,53 @@
 								</a>
 								<div class="menu-subcatalog__submenu submenu-subcatalog">
 									<ul class="submenu-subcatalog__menu">
-										<li>
+										<li class="submenu-subcatalog__parent">
 											<a href="#" class="submenu-subcatalog__link">
 												АСИНХРОННЫЙ
 											</a>
+											<div class="submenu-subcatalog__body">
+												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															Control Techniques
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															СHINT
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															ABB
+														</a>
+													</li>
+												</ul>
+											</div>
+										</li>
+										<li class="submenu-subcatalog__parent">
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+											<div class="submenu-subcatalog__body">
+												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															Control Techniques
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															СHINT
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															ABB
+														</a>
+													</li>
+												</ul>
+											</div>
 										</li>
 										<li>
 											<a href="#" class="submenu-subcatalog__link">
@@ -41,6 +84,181 @@
 												Постоянного тока
 											</a>
 										</li>
+										<li class="submenu-subcatalog__parent">
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+											<div class="submenu-subcatalog__body">
+												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															Control Techniques
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															СHINT
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															ABB
+														</a>
+													</li>
+												</ul>
+											</div>
+										</li>
+										<li class="submenu-subcatalog__parent">
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+											<div class="submenu-subcatalog__body">
+												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															Control Techniques
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															СHINT
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															ABB
+														</a>
+													</li>
+												</ul>
+											</div>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+										<li class="submenu-subcatalog__parent">
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+											<div class="submenu-subcatalog__body">
+												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															Control Techniques
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															СHINT
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															ABB
+														</a>
+													</li>
+												</ul>
+											</div>
+										</li>
+										<li class="submenu-subcatalog__parent">
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+											<div class="submenu-subcatalog__body">
+												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															Control Techniques
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															СHINT
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															ABB
+														</a>
+													</li>
+												</ul>
+											</div>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+										<li class="submenu-subcatalog__parent">
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+											<div class="submenu-subcatalog__body">
+												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															Control Techniques
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															СHINT
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															ABB
+														</a>
+													</li>
+												</ul>
+											</div>
+										</li>
+										<li class="submenu-subcatalog__parent">
+											<a href="#" class="submenu-subcatalog__link">
+												АСИНХРОННЫЙ
+											</a>
+											<div class="submenu-subcatalog__body">
+												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															Control Techniques
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															СHINT
+														</a>
+													</li>
+													<li>
+														<a href="#" class="items-submenu-subcatalog__link">
+															ABB
+														</a>
+													</li>
+												</ul>
+											</div>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Серво
+											</a>
+										</li>
+										<li>
+											<a href="#" class="submenu-subcatalog__link">
+												Постоянного тока
+											</a>
+										</li>
+
 									</ul>
 								</div>
 							</li>
